--- a/bot/package.json
+++ b/bot/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "debug": "cd ./src && ts-node ./index.ts",
+    "build": "tsc -p .",
+    "start": "cd ./dist && node ./index.js"
   },
   "author": "",
   "license": "ISC",
