--- a/bot/package.json
+++ b/bot/package.json
@@ -6,17 +6,22 @@
   "scripts": {
     "debug": "cd ./src && ts-node ./index.ts",
     "build": "tsc -p .",
-    "start": "cd ./dist && node ./index.js"
+    "start": "cd ./dist && node ./index.js",
+    "deploy-command": "cd ./src && ts-node ./deploy-commands.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/async-lock": "^1.4.1",
     "@types/node": "^20.8.7",
     "eslint": "^8.52.0",
+    "prisma": "^5.5.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@prisma/client": "^5.5.2",
+    "async-lock": "^1.4.0",
     "discord.js": "^14.13.0"
   }
 }
