--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: '4'
 
+networks:
+  database:
+    driver: bridge
+
 services:
   bot:
     build: ./
@@ -8,6 +12,21 @@ services:
       - ./bot/:/workspace/bot:delegated
       - node-modules:/workspace/bot/node_modules
     working_dir: /workspace/bot
+    networks:
+      - database
+
+  db:
+    image: postgres:latest
+    restart: unless-stopped
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: discord
+      POSTGRES_DB: discord
+    networks:
+      - database
 
 volumes:
   node-modules:
+  postgres-data:
