--- a/bot/package.json
+++ b/bot/package.json
@@ -20,8 +20,11 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@discordjs/voice": "^0.16.0",
     "@prisma/client": "^5.5.2",
     "async-lock": "^1.4.0",
-    "discord.js": "^14.13.0"
+    "discord.js": "^14.13.0",
+    "ffmpeg-static": "^5.2.0",
+    "libsodium-wrappers": "^0.7.13"
   }
 }
