feat: multiple bot

--- a/bot/src/config.json.example
+++ b/bot/src/config.json.example
@@ -1,4 +1,8 @@
 {
-    "bot_token": "<your bot token>",
-    "client_id": "<your bot client id>"
+    "bot_info": [
+        {
+            "bot_token": "<your bot token>",
+            "client_id": "<your bot client id>"
+        }
+    ]
 }
