--- a/bot/package.json
+++ b/bot/package.json
@@ -5,9 +5,9 @@
   "main": "",
   "scripts": {
     "debug": "cd ./src && ts-node ./index.ts",
-    "build": "tsc -p .",
-    "start": "cd ./dist && node ./index.js",
-    "deploy-command": "cd ./src && ts-node ./deploy-commands.ts"
+    "build": "node -e \"fs.rmdirSync('dist', {recursive: true})\" & npx tsc -p .",
+    "start": "node ./dist/index.js",
+    "deploy-command": "npx ts-node  -r tsconfig-paths/register src/deploy-commands.ts"
   },
   "author": "",
   "license": "ISC",
@@ -15,13 +15,14 @@
     "@types/async-lock": "^1.4.1",
     "@types/node": "^20.8.7",
     "eslint": "^8.52.0",
-    "prisma": "^5.5.2",
+    "prisma": "^5.13.0",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
     "@discordjs/voice": "^0.16.0",
-    "@prisma/client": "^5.5.2",
+    "@prisma/client": "^5.13.0",
     "async-lock": "^1.4.0",
     "discord.js": "^14.13.0",
     "ffmpeg-static": "^5.2.0",
