--- a/bot/package.json
+++ b/bot/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "",
   "scripts": {
-    "debug": "cd ./src && ts-node ./index.ts",
-    "build": "node -e \"fs.rm('dist', {recursive: true}, err => {})\" && npx tsc",
+    "debug": "ts-node -r tsconfig-paths/register ./src/index.ts",
+    "build": "node -e \"fs.rm('dist', {recursive: true}, err => {})\" && npx tsc -p tsconfig.json && npx tsc-alias -p tsconfig.json",
     "start": "node ./dist/index.js",
-    "deploy-command": "npx ts-node src/deploy-commands.ts"
+    "deploy-command": "npx ts-node src/scripts/deploy-commands.ts"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +17,7 @@
     "eslint": "^8.52.0",
     "prisma": "^5.13.0",
     "ts-node": "^10.9.1",
+    "tsc-alias": "^1.8.8",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
   },
