--- a/bot/package.json
+++ b/bot/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "",
   "scripts": {
-    "debug": "cd ./src && ts-node ./index.ts",
-    "build": "tsc -p .",
-    "start": "cd ./dist && node ./index.js",
-    "deploy-command": "cd ./src && ts-node ./deploy-commands.ts"
+    "debug": "npx ts-node -r tsconfig-paths/register ./src/index.ts",
+    "build": "node -e \"fs.rm('dist', {recursive: true}, err => {})\" && npx tsc -p tsconfig.json && npx tsc-alias -p tsconfig.json",
+    "start": "node ./dist/index.js",
+    "deploy-command": "npx ts-node -r tsconfig-paths/register ./src/scripts/deploy-command.ts"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +17,8 @@
     "eslint": "^8.52.0",
     "prisma": "^5.5.2",
     "ts-node": "^10.9.1",
+    "tsc-alias": "^1.8.10",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
