--- a/bot/src/config.json.example
+++ b/bot/src/config.json.example
@@ -1,4 +1,5 @@
 {
-    "BOT_TOKEN": "<your bot token>",
-    "BOT_CLIENT_ID": "<your bot client id>"
+    "BOT_TOKEN": "",
+    "BOT_CLIENT_ID": "",
+    "VOICEVOX_ENDPOINT": ""
 }
