--- a/bot/package.json
+++ b/bot/package.json
@@ -27,6 +27,7 @@
     "async-lock": "^1.4.0",
     "discord.js": "^14.13.0",
     "ffmpeg-static": "^5.2.0",
-    "libsodium-wrappers": "^0.7.13"
+    "libsodium-wrappers": "^0.7.13",
+    "pm2": "^5.4.0"
   }
 }
