--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
           cache-dependency-path: '**/package-lock.json'
       - run: npm ci
       - run: |
-          touch config.json
+          touch src/config.json
           echo '{"BOT_TOKEN": "${{ secrets.BOT_TOKEN }}","BOT_CLIENT_ID": "${{ secrets.BOT_CLIENT_ID }}","VOICEVOX_ENDPOINT": "${{ secrets.VOICEVOX_ENDPOINT }}"}' >> config.json
       - run: npm run build
       - name: Deploy Application Command
