--- a/bot/package.json
+++ b/bot/package.json
@@ -28,7 +28,9 @@
     "axios": "^1.7.2",
     "discord.js": "^14.13.0",
     "ffmpeg-static": "^5.2.0",
+    "inversify": "^6.0.2",
     "libsodium-wrappers": "^0.7.13",
-    "pm2": "^5.4.0"
+    "pm2": "^5.4.0",
+    "reflect-metadata": "^0.2.2"
   }
 }
