--- a/bot/package.json
+++ b/bot/package.json
@@ -31,6 +31,7 @@
     "inversify": "^6.0.2",
     "libsodium-wrappers": "^0.7.13",
     "pm2": "^5.4.0",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "tsyringe": "^4.8.0"
   }
 }
