--- a/bot/package.json
+++ b/bot/package.json
@@ -26,6 +26,7 @@
     "@prisma/client": "^5.14.0",
     "async-lock": "^1.4.0",
     "axios": "^1.7.2",
+    "csv-parse": "^5.5.6",
     "discord.js": "^14.13.0",
     "ffmpeg-static": "^5.2.0",
     "inversify": "^6.0.2",
