--- a/bot/package.json
+++ b/bot/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/async-lock": "^1.4.1",
     "@types/node": "^20.8.7",
+    "@types/websocket": "^1.0.10",
     "eslint": "^8.52.0",
     "prisma": "^5.14.0",
     "ts-node": "^10.9.1",
@@ -33,6 +34,7 @@
     "libsodium-wrappers": "^0.7.13",
     "pm2": "^5.4.0",
     "reflect-metadata": "^0.2.2",
-    "tsyringe": "^4.8.0"
+    "tsyringe": "^4.8.0",
+    "websocket": "^1.0.35"
   }
 }
