--- a/bot/.env.example
+++ b/bot/.env.example
@@ -5,3 +5,9 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://discord:postgres@db:5432/discord?schema=public"
+BOT_TOKEN=""
+BOT_CLIENT_ID=""
+VOICEVOX_ENDPOINT="http://localhost:50021"
+CNNAPI_ENDPOINT="http://192.168.116.78:60000"
+TWITCH_CLIENT_ID=""
+TWTICH_CLIENT_SECRET=""
