--- a/bot/package.json
+++ b/bot/package.json
@@ -29,6 +29,7 @@
     "axios": "^1.7.2",
     "csv-parse": "^5.5.6",
     "discord.js": "^14.13.0",
+    "dotenv": "^16.4.5",
     "ffmpeg-static": "^5.2.0",
     "inversify": "^6.0.2",
     "libsodium-wrappers": "^0.7.13",
