--- a/bot/.env.example
+++ b/bot/.env.example
@@ -4,6 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+TZ=UTC
 DATABASE_URL="postgresql://discord:postgres@db:5432/discord?schema=public"
 BOT_TOKEN=""
 BOT_CLIENT_ID=""
