--- a/bot/package.json
+++ b/bot/package.json
@@ -30,7 +30,9 @@
     "csv-parse": "^5.5.6",
     "discord.js": "^14.13.0",
     "dotenv": "^16.4.5",
+    "fast-xml-parser": "^4.4.0",
     "ffmpeg-static": "^5.2.0",
+    "html-entities": "^2.5.2",
     "inversify": "^6.0.2",
     "libsodium-wrappers": "^0.7.13",
     "pm2": "^5.4.0",
