--- a/bot/package.json
+++ b/bot/package.json
@@ -16,6 +16,8 @@
     "@types/node": "^20.8.7",
     "@types/websocket": "^1.0.10",
     "eslint": "^8.52.0",
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "^3.3.3",
     "prisma": "^5.14.0",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.10",
@@ -27,6 +29,7 @@
     "@prisma/client": "^5.14.0",
     "async-lock": "^1.4.0",
     "axios": "^1.7.2",
+    "bot": "file:",
     "csv-parse": "^5.5.6",
     "discord.js": "^14.13.0",
     "dotenv": "^16.4.5",
