--- a/bot/.env.example
+++ b/bot/.env.example
@@ -12,3 +12,6 @@ VOICEVOX_ENDPOINT="http://localhost:50021"
 CNNAPI_ENDPOINT="http://192.168.116.78:60000"
 TWITCH_CLIENT_ID=""
 TWTICH_CLIENT_SECRET=""
+MC_API_ENDPOINT="https://localhost:7000"
+MC_API_TOKEN=
+MC_CHAT_CHANNEL=
