--- a/bot/.env.example
+++ b/bot/.env.example
@@ -14,3 +14,6 @@ TWTICH_CLIENT_SECRET=""
 MC_API_ENDPOINT="https://localhost:7000"
 MC_API_TOKEN=
 MC_CHAT_CHANNEL=
+GOOGLE_CLIENT_EMAIL=
+GOOGLE_PRIVATE_KEY=
+PICTURE_FOLDER_ID=
