--- a/bot/package.json
+++ b/bot/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^16.4.5",
     "fast-xml-parser": "^4.4.0",
     "ffmpeg-static": "^5.2.0",
+    "googleapis": "^144.0.0",
     "html-entities": "^2.5.2",
     "inversify": "^6.0.2",
     "libsodium-wrappers": "^0.7.13",
