--- a/bot/package.json
+++ b/bot/package.json
@@ -37,6 +37,7 @@
     "googleapis": "^144.0.0",
     "html-entities": "^2.5.2",
     "inversify": "^6.0.2",
+    "memory-streams": "^0.1.3",
     "node-html-parser": "^6.1.13",
     "pm2": "^5.4.0",
     "reflect-metadata": "^0.2.2",
